; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264qpel_mmi.c_ff_put_h264_qpel4_mc21_mmi.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264qpel_mmi.c_ff_put_h264_qpel4_mc21_mmi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_put_h264_qpel4_mc21_mmi(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca [16 x i32], align 16
  %8 = alloca [16 x i32], align 16
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = getelementptr inbounds [16 x i32], [16 x i32]* %7, i64 0, i64 0
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @put_h264_qpel4_h_lowpass_mmi(i32* %9, i32* %10, i32 4, i32 %11)
  %13 = getelementptr inbounds [16 x i32], [16 x i32]* %8, i64 0, i64 0
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @put_h264_qpel4_hv_lowpass_mmi(i32* %13, i32* %14, i32 4, i32 %15)
  %17 = load i32*, i32** %4, align 8
  %18 = getelementptr inbounds [16 x i32], [16 x i32]* %7, i64 0, i64 0
  %19 = getelementptr inbounds [16 x i32], [16 x i32]* %8, i64 0, i64 0
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @ff_put_pixels4_l2_8_mmi(i32* %17, i32* %18, i32* %19, i32 %20, i32 4, i32 4, i32 4)
  ret void
}

declare dso_local i32 @put_h264_qpel4_h_lowpass_mmi(i32*, i32*, i32, i32) #1

declare dso_local i32 @put_h264_qpel4_hv_lowpass_mmi(i32*, i32*, i32, i32) #1

declare dso_local i32 @ff_put_pixels4_l2_8_mmi(i32*, i32*, i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
